# crypto-analyzer-

./: .env.example  .gitignore  AUDIT_PROMPT.md  AUDIT_V3.md  CHANGELOG.md  CLAUDE.md  COMMIT_LOG.md  Dockerfile  MANUAL.md  README.md  SPEC_V2.md  SPEC_V3.md  SPEC_V4.md  SPEC_V5.md  bot_snapshot.json  docker-compose.yml  requirements.txt  tmp_analyze.py  명세서.md
.githooks/: post-commit
backtest/: report.py  run_backtest.py  simulator.py  train_backtest.py  train_v2.py  train_v3.py
bot_logs/: bot.log.2026-W16  bot.log.2026-W17  signals.log.2026-W16  signals.log.2026-W18
config/: settings.yaml
crypto-scalper/: Cargo.toml  Dockerfile
crypto-scalper/src/: config.rs  main.rs
crypto-scalper/src/data/: binance_rest.rs  binance_ws.rs  db.rs  mod.rs  okx_ws.rs  redis_client.rs
crypto-scalper/src/features/: book_resilience.rs  cvd.rs  hurst.rs  microstructure.rs  mod.rs  ofi.rs  ou_zscore.rs  parkinson.rs  vpin.rs  welford.rs
crypto-scalper/src/models/: candle.rs  features.rs  mod.rs  position.rs  signal.rs
crypto-scalper/src/monitoring/: dashboard.rs  logger.rs  mod.rs  telegram.rs
crypto-scalper/src/strategy/: detector.rs  ensemble.rs  ml_engine.rs  mod.rs  regime.rs
crypto-scalper/src/trading/: manager.rs  mod.rs  okx_api.rs  risk.rs
data/: setup_tracker.json
digests/: 20260408_100001.txt  20260408_101501.txt  20260408_103001.txt  20260408_104501.txt  20260408_110001.txt  20260408_111501.txt  20260408_113001.txt  20260408_114501.txt  20260408_120001.txt  20260408_121501.txt  20260408_123001.txt  20260408_124501.txt  20260408_130001.txt  (+3932 more)
src/: main.py
(+77 files in other folders)
