[package]
name = "crypto-scalper"
version = "4.0.0"
edition = "2021"
description = "BTC Microstructure Scalping Engine — 100% Rust + Burn"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# SQLite (burn-dataset 0.20과 동일 rusqlite 버전)
rusqlite = { version = "0.37", features = ["bundled"] }

# ML / Deep Learning
burn = { version = "0.20", features = ["train", "ndarray"] }
burn-ndarray = "0.20"

# Math
ndarray = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (OKX API signing)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Error handling
anyhow = "1"

# Environment
dotenvy = "0.15"

# HTTP server (dashboard)
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# URL encoding
url = "2"

# Random
rand = "0.8"

# Graceful shutdown
signal-hook = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
